@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009-2015 The Project Lombok Authors.
+ * Copyright (C) 2009-2021 The Project Lombok Authors.
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -24,24 +24,30 @@ package lombok;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-
-import lombok.eclipse.Eclipse;
-import lombok.javac.Javac;
 
 import org.junit.runner.Description;
 import org.junit.runner.Runner;
 import org.junit.runner.notification.Failure;
 import org.junit.runner.notification.RunNotifier;
 
+import lombok.eclipse.Eclipse;
+import lombok.javac.Javac;
+
 public class DirectoryRunner extends Runner {
+	/** Add 1 or more file names to reduce the testset to just the named file(s). No files = test it all. */
+	private static final List<String> DEBUG_FOCUS_ON_FILE = Arrays.asList(
+		);
+	
 	public enum Compiler {
 		DELOMBOK {
 			@Override public int getVersion() {
 				return Javac.getJavaCompilerVersion();
 			}
-		}, 
+		},
 		JAVAC {
 			@Override public int getVersion() {
 				return DELOMBOK.getVersion();
@@ -49,7 +55,8 @@ public class DirectoryRunner extends Runner {
 		},
 		ECJ {
 			@Override public int getVersion() {
-				return Eclipse.getEcjCompilerVersion();
+				String javaVersionString = System.getProperty("compiler.compliance.level");
+				return javaVersionString != null ? Integer.parseInt(javaVersionString) : Eclipse.getEcjCompilerVersion();
 			}
 		};
 		
@@ -71,12 +78,30 @@ public class DirectoryRunner extends Runner {
 			return true;
 		}
 		
-		public abstract boolean expectChanges(); 
+		public abstract boolean expectChanges();
+		public String testNamePrefix() {
+			return "";
+		}
 	}
-		
+	
 	private static final FileFilter JAVA_FILE_FILTER = new FileFilter() {
 		@Override public boolean accept(File file) {
-			return file.isFile() && file.getName().endsWith(".java");
+			if (!file.isFile() || !file.getName().endsWith(".java")) return false;
+			boolean positiveFilter = false;
+			for (String dfof : DEBUG_FOCUS_ON_FILE) {
+				if (dfof.isEmpty()) continue;
+				if (!dfof.endsWith(".java")) dfof = dfof + ".java";
+				boolean invert = dfof.startsWith("!");
+				if (invert) dfof = dfof.substring(1);
+				positiveFilter = positiveFilter || !invert;
+				int starIdx = dfof.indexOf('*');
+				if (starIdx == -1) {
+					if (file.getName().equals(dfof)) return !invert;
+				} else {
+					if (file.getName().startsWith(dfof.substring(0, starIdx)) && file.getName().endsWith(dfof.substring(starIdx + 1))) return !invert;
+				}
+			}
+			return !positiveFilter;
 		}
 	};
 	
@@ -88,13 +113,12 @@ public class DirectoryRunner extends Runner {
 	public DirectoryRunner(Class<?> testClass) throws Exception {
 		description = Description.createSuiteDescription(testClass);
 		
-		this.params = (TestParams) testClass.newInstance();
+		this.params = (TestParams) testClass.getConstructor().newInstance();
 		
 		Throwable error = null;
 		try {
 			addTests(testClass);
-		}
-		catch (Throwable t) {
+		} catch (Throwable t) {
 			error = t;
 		}
 		this.failure = error;
@@ -103,7 +127,7 @@ public class DirectoryRunner extends Runner {
 	private void addTests(Class<?> testClass) throws Exception {
 		for (File file : params.getBeforeDirectory().listFiles(JAVA_FILE_FILTER)) {
 			if (!params.accept(file)) continue;
-			Description testDescription = Description.createTestDescription(testClass, file.getName());
+			Description testDescription = Description.createTestDescription(testClass, this.params.testNamePrefix() + file.getName());
 			description.addChild(testDescription);
 			tests.put(file.getName(), testDescription);
 		}
@@ -159,7 +183,8 @@ public class DirectoryRunner extends Runner {
 		case DELOMBOK:
 			return new RunTestsViaDelombok().createTester(params, file, "javac", params.getVersion());
 		case ECJ:
-			return new RunTestsViaEcj().createTester(params, file, "ecj", params.getVersion());
+			String platform = RunTestsViaEcj.eclipseAvailable() ? "eclipse" : "ecj";
+			return new RunTestsViaEcj().createTester(params, file, platform, params.getVersion());
 		default:
 		case JAVAC:
 			throw new UnsupportedOperationException();
